Fix problem with skills description shifting down

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,6 @@ body {
 	margin: 5px;
 }
 
-#pnl_projects_description {
-	position: absolute;
-	top 0px;
-	left 0px;
-}
-
 .fixed-close-button {
 	position: fixed;
 	z-index: 999999;
@@ -62,5 +56,8 @@ body {
 }
 
 .description-panel {
+	position: absolute;
+	top 0px;
+	left 0px;
 	padding-bottom: 50px;
 }
